# sparkcast

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  apphosting.yaml  next.config.ts  package-lock.json  package.json  vercel.json
automator/: .dockerignore  .env.sample  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  DEVCONTAINER_QUICKSTART.md  JOB_ARCHITECTURE.md  LICENSE  Makefile  README.md  pyproject.toml  pyrightconfig.json  pytest.ini
automator/.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh
automator/.github/: pull_request_template.md
automator/.github/ISSUE_TEMPLATE/: hotfix.md  refactor.md  release.md  task.md
automator/.github/workflows/: cd.yml  ci.yml  close-linked-issues-on-pr-merge.yml  discord-notify.yml  sync-labels.yml
automator/app/: .dockerignore  .env.sample  Dockerfile  Makefile  README.md  pyproject.toml
automator/app/controller/: Dockerfile  main.py
automator/app/data/: rss_feed.xml  short_dialogue.m4a
automator/app/docs/: CHANNEL_CREDENTIALS_GUIDE.md  DATA_SCHEMA.md  ENVIRONMENT_AND_TEST_SPEC.md  FIRESTORE_SPEC.md
automator/app/examples/: example_ai_analyzer.py  example_description_itunes_summary.py  example_get_secret_manager.py  example_list_gcs_objects.py  example_rss_generation.py  example_storage_download.py  example_storage_download_from_gcs.py  example_storage_transfer_gcs2r2.py  example_storage_upload_audio.py
automator/app/examples/output/: output_rss_feed.xml  output_rss_feed_updated.xml
automator/app/fetch-job/: Dockerfile  main.py
automator/app/fetch-job/tests/: __init__.py
automator/app/notify-job/: main.py
automator/app/podcast-processor/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
automator/app/podcast-processor/examples/: example_ai_analyzer.py  example_rss_generation.py  example_storage_download.py  example_storage_transfer_gcs2r2.py  example_storage_upload_audio.py
automator/app/podcast-processor/services/: __init__.py  ai_analyzer.py  notifier.py  rss_generator.py  rss_manager.py  secret_manager.py  storage.py
automator/app/podcast-processor/tests/: example_rss_generation.py  test_ai_analyzer.py  test_get_audio_info.py  test_notifier.py  test_storage.py
automator/app/process-job/: main.py
automator/app/process-job/tests/: __init__.py
automator/app/shared/: README.md  __init__.py  ai.py  cdn.py  config.py  logger.py  models.py  notifier.py  pyproject.toml  storage.py
automator/app/src/: agenda_main.py  main.py  promoter_main.py
automator/app/src/domain/: __init__.py
automator/app/src/domain/interfaces/: __init__.py  gateways.py
automator/app/src/domain/models/: __init__.py  agenda.py  common.py  episode.py  sns_post.py
automator/app/src/entrypoints/: __init__.py  agenda_main.py  main.py  promoter_main.py
automator/app/src/infrastructure/: __init__.py  ai_analyzer.py  discord_fetcher.py  episode_repository.py  notifier.py  secret_manager.py  storage.py  x_api.py
automator/app/src/services/: __init__.py  agenda_formatter.py  ai_analyzer.py  audio_converter.py  discord_fetcher.py  firestore_manager.py  news_fetcher.py  news_relevance.py  news_researcher.py  notifier.py  rss_manager.py  secret_manager.py  storage.py  transcript_analyzer.py
automator/app/src/usecases/: __init__.py  auto_post_sns.py  generate_weekly_agenda.py  process_podcast_workflow.py
automator/app/tests/: TEST_GUIDE.md  test_agenda_formatter.py  test_ai_analyzer.py  test_audio_converter.py  test_auto_post_sns.py  test_discord_fetcher.py  test_entrypoint_config.py  test_episode_object_reference.py  test_episode_repository.py  test_firestore_manager.py  test_generate_weekly_agenda.py  test_get_audio_info.py  test_main.py  test_news_fetcher.py  test_news_relevance.py  test_news_researcher.py  test_notifier.py  test_process_podcast_workflow.py  test_rss_manager_metadata.py  test_secret_manager.py  test_sns_post.py  test_storage.py  test_transcript_analyzer.py  test_x_api.py
automator/app/upload-job/: Dockerfile  main.py
automator/infrastructure/: .terraform.lock.hcl  Dockerfile  agenda.tf  cloud_sql.tf  data.tf  eventarc.tf  firestore.tf  function.tf  gcs.tf  iam.tf  job.tf  locals.tf  outputs.tf  podcast_ui.tf  promoter.tf  provider.tf  r2.tf  run.tf  secrets.tf  services.tf  variables.tf  workflows.tf
automator/infrastructure/environments/dev/: backend.conf  variables.tfvars
automator/infrastructure/environments/prod/: backend.conf  variables.tfvars
automator/infrastructure/modules/gcp/artifact_registry_docker_image/: docker.tf  locals.tf  output.tf
automator/infrastructure/modules/gcp/docker_based_cloud_run/: image.tf  output.tf  run.tf  variables.tf
automator/infrastructure/modules/gcp/docker_based_cloud_run_job/: job.tf  variables.tf
automator/infrastructure/modules/google/artifact_registry_docker_image/: data.tf  docker.tf  locals.tf  output.tf  registry.tf  variables.tf
automator/infrastructure/modules/google/docker_based_cloud_run_job/: job.tf  output.tf
automator/terraform/: README.md  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
automator/terraform/modules/ai/: README.md  main.tf  variables.tf
automator/terraform/modules/compute/: README.md  main.tf  variables.tf
automator/terraform/modules/core/: README.md  main.tf
automator/terraform/modules/secrets/: README.md  main.tf
automator/terraform/modules/storage/: README.md  main.tf  variables.tf
automator/terraform/modules/trigger/: README.md  main.tf  variables.tf
docs/: data-model.md  system-overview.md  system_architecture.md
infra/: .gitignore  .terraform.lock.hcl  Dockerfile  README.md  agenda.tf  app-hosting.tf  budget.tf  cloud-run.tf  cloud-scheduler.tf  cloud_sql.tf  developer-connect.tf  firestore.tf  github-actions.tf  iam.tf  job.tf  locals.tf  outputs.tf  provider.tf  providers.tf  secrets.tf  service-account.tf  terraform.tfvars  ui_cloud_run.tf  ui_cloud_scheduler.tf  ui_domain_mapping.tf  ui_firestore.tf  ui_iam.tf  ui_secrets.tf  variables.tf  versions.tf  vertex-ai.tf
migrations/: 001_create_episodes.sql  (+2 more)
(+208 files in other folders)
