[project]
name = "podcast-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.17",
    "feedgen>=1.0.0",
    "feedparser>=6.0.12",
    "functions-framework==3.*",
    "google-cloud-aiplatform>=1.132.0",
    "google-cloud-secret-manager>=2.26.0",
    "google-cloud-storage>=3.7.0",
    "pydantic>=2.12.5",
    "pydub>=0.25.1",
    "pytz>=2025.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[tool.uv.workspace]
members = ["."]